archive/etcd/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: etcd
  namespace: catcode
spec:
  serviceName: "etcd"
  replicas: 1
  selector:
    matchLabels:
      app: etcd
  template:
    metadata:
      labels:
        app: etcd
    spec:
      containers:
      - name: etcd
        image: bitnami/etcd:latest
        command:
          - /opt/bitnami/etcd/bin/etcd
        args:
          - --config-file=/opt/bitnami/etcd/conf/etcd.conf.yml
        volumeMounts:
        - name: etcd-data
          mountPath: /var/lib/etcd
        - name: etcd-config
          mountPath: /opt/bitnami/etcd/conf/etcd.conf.yml
          subPath: etcd.conf.yml
      volumes:
      - name: etcd-config
        configMap:
          name: etcd-config
  volumeClaimTemplates:
  - metadata:
      name: etcd-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 2Gi
      storageClassName: nfs-storage
